Remeved how to run on Windows.